# uebung_3_Graphen

./: .gitignore  CMakeLists.txt  README.md  main.h.in
headers/: cmake_variables.h  graph.h  main.h  printStructs.h  structs.h
source/: graph.cpp  main.c  main.cpp  printStructs.cpp
